2008-08-25  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-extract/Makefile.am:
	* src/tracker-extract/tracker-extract-ps.c: Fix up symbol not found
	that prevented the PS module to be loaded.
	* src/tracker-extract/tracker-extract.c (initialize_extractors):
	Provide a better error message if a module can't be loaded.

2008-08-22  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-monitor.c: Handle situations where the
	source or target are not monitored and emit the appropriate
	signals up the stack.
	
	* src/trackerd/tracker-processor.c: Check the source AND the
	target to see if they should be ignored or not when we get MOVE
	monitor events. If both are ignored, we do nothing, if source is
	ignored we create the new file in the database, if target is
	ignored we delete the old file in the database, if both are valid
	we do a simple move in the database. I say simple, it isn't that
	simple. :)

2008-08-22  Carlos Garnacho  <carlos@imendio.com>

	* src/trackerd/tracker-marshal.list:
	* src/trackerd/tracker-dbus.c: Fix marshaller for Finished signal.

2008-08-22  Carlos Garnacho  <carlos@imendio.com>

	* data/dbus/tracker-indexer.xml:
	* src/trackerd/tracker-dbus.c:
	* src/trackerd/tracker-processor.c:
	* src/trackerd/tracker-xesam-manager.c: Added a missing argument to
	the Finished DBus signal definition in the indexer. Also updated all
	callers.

2008-08-22  Mikael Ottela    <mikael.ottela@ixonos.com>

	* src/trackerd/tracker-rdf-query.c:
	* src/trackerd/tracker-db.c: Fixes to index and string type 
	metadata handling in queries.

2008-08-22  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-metadata-utils.c
	(tracker_metadata_read): Strip metadata separators when reading from
	the external extractor.

2008-08-22  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-module.c
	(tracker_indexer_module_file_get_uri): Reduce the warning to a debug